# web-study

./: .gitignore  LOAD_TESTING_GUIDE.md  Links.md  QUEUE_PROCESSING_GUIDE.md  README.md  _codeql_detected_source_root
C-Basic/: Makefile  README.md
C-Basic/aerospace/: README.md
C-Basic/docs/: DEPLOYMENT.md  GETTING_STARTED.md  HARDWARE_GUIDE.md
C-Basic/examples/: drone_flight.c  rc_aircraft.c  robot_control.c  solar_monitor.c  wind_monitor.c
C-Basic/include/: aerospace.h  energy.h  hal.h  robotics.h
C-Basic/robotics/: README.md
C-Basic/src/: aerospace.c  energy.c  hal.c  robotics.c
ballerina/: README.md
ballerina/samples/: api_client.bal  concurrent_workers.bal  data_transformer.bal  web_service.bal  webhook_handler.bal
ballerina/yelp-ai-assistant/: Ballerina.toml  README.md  main.bal
csharp/: README.md
csharp/samples/: AsyncPatternsSample.cs  AsyncStreamsSample.cs  BaseObserver.cs  BuyShareController.cs  CacheManager.cs  ChannelsSample.cs  ConcurrentCollectionsSample.cs  HealthChecksSample.cs  IStockClient.cs  LockingPatternsSample.cs  Program.cs  (+33 more)
devops-aws/: EXAMPLES-SUMMARY.md  README.md  STUDY-PLAN.md
go/: README.md
groovy/: .gitignore  README.md  build.gradle
java/: README.md
javascript/: README.md
kotlin/: README.md
lisp/: .gitignore  LEARNING_PATH.md  README.md  SUMMARY.md  lisp-study.asd
python/: README.md
r/: README.md
ruby/: README.md
rust/: README.md
rust/samples/: Cargo.toml  async_coroutines.rs  rust_http_server.rs  threading_example.rs  webhook_server.rs
rust/yelp-ai-assistant/: Cargo.toml  README.md
rust/yelp-ai-assistant/src/: cache.rs  circuit_breaker.rs  intent.rs  main.rs  models.rs  orchestration.rs  rag.rs  routing.rs  search.rs
scala/: README.md
src/: readme.md
swift/: README.md
teavm/: README.md
zig/: README.md
(+566 files in other folders)
