[package]
name = "rust_samples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_http_server"
path = "rust_http_server.rs"

[[bin]]
name = "threading_example"
path = "threading_example.rs"

[[bin]]
name = "webhook_server"
path = "webhook_server.rs"

[[bin]]
name = "async_coroutines"
path = "async_coroutines.rs"

[dependencies]
bytes = "1"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
